Make subseq method dealing with qualities

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 cpu.pprof
 cpu.trace
-obicount
-obipairing
 test
 bin
 vendor
 *.fastq
 *.fasta
-obiconvert
-obipcr
+
+/obiconvert
+/obicount
+/obimultiplex
+/obipairing
+/obipcr
