--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,35 @@ Stat_error.knit.md
 .Rhistory
 Stat_error.nb.html
 Stat_error.Rmd
-doc/_main.log
-doc/_book/_main.tex
+
+/.luarc.json
+/doc/TAXO/
+/doc/results/
+/doc/_main.log
+/doc/_book/_main.tex
+/doc/_freeze/
+/doc/tutorial_files/
+/doc/wolf_data/
+/taxdump/
+/.vscode/
+
+/Algo-Alignement.numbers
+/Estimate_proba_true_seq.html
+/Estimate_proba_true_seq.nb.html
+/Estimate_proba_true_seq.Rmd
+/modele_error_euka.qmd
+/obitools.code-workspace
+doc/.DS_Store
+.DS_Store/
+sample/euka03.ecotag.fasta.gz
+sample/ratio.csv
+sample/STD_PLN_1.dat
+sample/STD_PLN_2.dat
+sample/subset_Pasvik_R1.fastq.gz
+sample/subset_Pasvik_R2.fastq.gz
+sample/test_gobitools.fasta.bz2
+.RData
+x
+xxx
+y
+/doc/wolf_diet.tgz
