Save change in various files
Former-commit-id: 428f8ee77c584b79cc2ef45eef2902c3e0754c77

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ bin
 vendor
 *.fastq
 *.fasta
+.DS_Store
 
 /obiconvert
 /obicount
@@ -42,16 +43,22 @@ Stat_error.Rmd
 /obitools.code-workspace
 doc/.DS_Store
 .DS_Store/
-sample/euka03.ecotag.fasta.gz
-sample/ratio.csv
-sample/STD_PLN_1.dat
-sample/STD_PLN_2.dat
-sample/subset_Pasvik_R1.fastq.gz
-sample/subset_Pasvik_R2.fastq.gz
-sample/test_gobitools.fasta.bz2
 .RData
 x
 xxx
 y
 /doc/wolf_diet.tgz
-doc/.DS_Store
+/doc/man/depends
+/sample/wolf_R1.fasta.gz
+/sample/wolf_R2.fasta.gz
+/sample/euka03.ecotag.fasta.gz
+/sample/ratio.csv
+/sample/STD_PLN_1.dat
+/sample/STD_PLN_2.dat
+/sample/subset_Pasvik_R1.fastq.gz
+/sample/subset_Pasvik_R2.fastq.gz
+/sample/test_gobitools.fasta.bz2
+euka03.csv*
+gbbct793.seq.gz
+gbinv1003.seq.gz
+gbpln210.seq
