Tag a Fatal bug release 4.0.5
Former-commit-id: 10b27c6d3867756d3159ef22eefd75db3fab84d0

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ vendor
 *.fastq
 *.fasta
 .DS_Store
+*.gml
+*.log
+/argaly
 
 /obiconvert
 /obicount
@@ -73,3 +76,7 @@ getoptions.adoc
 Archive.zip
 .DS_Store
 sample/.DS_Store
+sample/consensus_graphs/specimen_hac_plants_Vern_disicolor_.gml
+93954
+Bact03.e5.gb_R254.obipcr.idx.fasta.save
+sample/test.obipcr.log
