Complement to the documentation
Former-commit-id: 89952a6f3bb261a6aaec24430906e635914ffce4

--- a/doc/book/_quarto.yml
+++ b/doc/book/_quarto.yml
@@ -41,12 +41,14 @@ execute:
 format:
   html:
     theme: zephyr
+    embed-resources: true
   pdf:
     documentclass: scrreprt
     keep-tex: true
   epub: 
     html-math-method: mathml
-
+    code-overflow: scroll
+    css: epub.css
 
 
 
