--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,22 @@ bug_obimultiplex/toto_mapping
 bug_obimultiplex/tutu
 bug_obimultiplex/tutu_mapping
 bug_obipairing/GIT1_GH_ngsfilter.txt
+doc/book/TAXO/citations.dmp
+doc/book/TAXO/delnodes.dmp
+doc/book/TAXO/division.dmp
+doc/book/TAXO/gc.prt
+doc/book/TAXO/gencode.dmp
+doc/book/TAXO/merged.dmp
+doc/book/TAXO/names.dmp
+doc/book/TAXO/nodes.dmp
+doc/book/TAXO/readme.txt
+doc/book/wolf_data/Release-253/ncbitaxo/citations.dmp
+doc/book/wolf_data/Release-253/ncbitaxo/delnodes.dmp
+doc/book/wolf_data/Release-253/ncbitaxo/division.dmp
+doc/book/wolf_data/Release-253/ncbitaxo/gc.prt
+doc/book/wolf_data/Release-253/ncbitaxo/gencode.dmp
+doc/book/wolf_data/Release-253/ncbitaxo/merged.dmp
+doc/book/wolf_data/Release-253/ncbitaxo/names.dmp
+doc/book/wolf_data/Release-253/ncbitaxo/nodes.dmp
+doc/book/wolf_data/Release-253/ncbitaxo/readme.txt
+doc/book/results/toto.tasta
