update the geometric obitag
Former-commit-id: acd8fe1c8c1cf443098432d818397b0b5d02df33

--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,4 @@ doc/book/wolf_data/Release-253/ncbitaxo/names.dmp
 doc/book/wolf_data/Release-253/ncbitaxo/nodes.dmp
 doc/book/wolf_data/Release-253/ncbitaxo/readme.txt
 doc/book/results/toto.tasta
+sample/.DS_Store
