Changes to be committed: 	modified:   .gitignore 	new file:   pkg/obitax/default_taxonomy.go 	modified:   pkg/obitax/taxon.go 	modified:   pkg/obitax/taxonnode.go 	modified:   pkg/obitax/taxonomy.go 	modified:   pkg/obitax/taxonset.go 	modified:   pkg/obitax/taxonslice.go 	modified:   pkg/obitools/obifind/iterator.go 	modified:   pkg/obitools/obifind/options.go

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,12 @@ doc/book/wolf_data/Release-253/ncbitaxo/readme.txt
 doc/book/results/toto.tasta
 sample/.DS_Store
 GO
+ncbitaxo/citations.dmp
+ncbitaxo/delnodes.dmp
+ncbitaxo/division.dmp
+ncbitaxo/gc.prt
+ncbitaxo/gencode.dmp
+ncbitaxo/merged.dmp
+ncbitaxo/names.dmp
+ncbitaxo/nodes.dmp
+ncbitaxo/readme.txt
