Changes to be committed: 	modified:   .github/workflows/obitest.yml 	modified:   Makefile 	modified:   obitests/obitools/obicount/test.sh

--- a/.github/workflows/obitest.yml
+++ b/.github/workflows/obitest.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Checkout obitools4 project
       uses: actions/checkout@v4
     - name: Run tests
-      run: make obitests
+      run: make githubtests
