with all the sample files for tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,135 +1,25 @@
-cpu.pprof
-cpu.trace
-test
-bin
-vendor
-*.fastq
-*.fasta
-*.fastq.gz
-*.fasta.gz
-.DS_Store
-*.gml
-*.log
-/argaly
+**/cpu.pprof
+**/cpu.trace
+**/test
+**/bin
+**/vendor
+**/*.fastq
+**/*.fasta
+**/*.fastq.gz
+**/*.fasta.gz
+**/.DS_Store
+**/*.gml
+**/*.log
+**/xxx*
+**/*.sav
+**/*.old
+**/*.tgz
 
-/obiconvert
-/obicount
-/obimultiplex
-/obipairing
-/obipcr
-/obifind
-/obidistribute
-/obiuniq
+.rhistory
+/.vscode
 /build
-/Makefile.old
-.Rproj.user
-obitools.Rproj
-Stat_error.knit.md
-.Rhistory
-Stat_error.nb.html
-Stat_error.Rmd
 
-/.luarc.json
-/doc/TAXO/
-/doc/results/
-/doc/_main.log
-/doc/_book/_main.tex
-/doc/_freeze/
-/doc/tutorial_files/
-/doc/wolf_data/
-/taxdump/
-/.vscode/
+/ncbitaxo
 
-/Algo-Alignement.numbers
-/Estimate_proba_true_seq.html
-/Estimate_proba_true_seq.nb.html
-/Estimate_proba_true_seq.Rmd
-/modele_error_euka.qmd
-/obitools.code-workspace
-.DS_Store
-.RData
-x
-xxx
-y
-/doc/wolf_diet.tgz
-/doc/man/depends
-/sample/wolf_R1.fasta.gz
-/sample/wolf_R2.fasta.gz
-/sample/euka03.ecotag.fasta.gz
-/sample/ratio.csv
-/sample/STD_PLN_1.dat
-/sample/STD_PLN_2.dat
-/sample/subset_Pasvik_R1.fastq.gz
-/sample/subset_Pasvik_R2.fastq.gz
-/sample/test_gobitools.fasta.bz2
-euka03.csv*
-gbbct793.seq.gz
-gbinv1003.seq.gz
-gbpln210.seq
-/doc/book/OBITools-V4.aux
-/doc/book/OBITools-V4.fdb_latexmk
-/doc/book/OBITools-V4.fls
-/doc/book/OBITools-V4.log
-/doc/book/OBITools-V4.pdf
-/doc/book/OBITools-V4.synctex.gz
-/doc/book/OBITools-V4.tex
-/doc/book/OBITools-V4.toc
-getoptions.adoc
-Archive.zip
-.DS_Store
-sample/.DS_Store
-sample/consensus_graphs/specimen_hac_plants_Vern_disicolor_.gml
-93954
-Bact03.e5.gb_R254.obipcr.idx.fasta.save
-sample/test.obipcr.log
-Bact02.e3.gb_R254.obipcr.fasta.gz
-Example_Arth03.ngsfilter
-SPER01.csv
-SPER03.csv
-wolf_diet_ngsfilter.txt
-xx
-xxx.gb
-yyy_geom.csv
-yyy_LCS.csv
-yyy.json
-bug_obimultiplex/toto
-bug_obimultiplex/toto_mapping
-bug_obimultiplex/tutu
-bug_obimultiplex/tutu_mapping
-bug_obipairing/GIT1_GH_ngsfilter.txt
-doc/book/TAXO/citations.dmp
-doc/book/TAXO/delnodes.dmp
-doc/book/TAXO/division.dmp
-doc/book/TAXO/gc.prt
-doc/book/TAXO/gencode.dmp
-doc/book/TAXO/merged.dmp
-doc/book/TAXO/names.dmp
-doc/book/TAXO/nodes.dmp
-doc/book/TAXO/readme.txt
-doc/book/wolf_data/Release-253/ncbitaxo/citations.dmp
-doc/book/wolf_data/Release-253/ncbitaxo/delnodes.dmp
-doc/book/wolf_data/Release-253/ncbitaxo/division.dmp
-doc/book/wolf_data/Release-253/ncbitaxo/gc.prt
-doc/book/wolf_data/Release-253/ncbitaxo/gencode.dmp
-doc/book/wolf_data/Release-253/ncbitaxo/merged.dmp
-doc/book/wolf_data/Release-253/ncbitaxo/names.dmp
-doc/book/wolf_data/Release-253/ncbitaxo/nodes.dmp
-doc/book/wolf_data/Release-253/ncbitaxo/readme.txt
-doc/book/results/toto.tasta
-sample/.DS_Store
-GO
-ncbitaxo/citations.dmp
-ncbitaxo/delnodes.dmp
-ncbitaxo/division.dmp
-ncbitaxo/gc.prt
-ncbitaxo/gencode.dmp
-ncbitaxo/merged.dmp
-ncbitaxo/names.dmp
-ncbitaxo/nodes.dmp
-ncbitaxo/readme.txt
-template.16S
-xxx.gz
-*.sav
-*.old
-ncbitaxo.tgz
-*.csv
+!/obitests/**
+!/sample/**
