--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
 
           # Build for Linux AMD64
           echo "Building for Linux AMD64..."
-          GOOS=linux GOARCH=amd64 make
+          GOOS=linux GOARCH=amd64 make obitools
           cd build
           for binary in *; do
             tar -czf ../release/${binary}_${VERSION}_linux_amd64.tar.gz ${binary}
@@ -63,7 +63,7 @@ jobs:
 
           # Build for Linux ARM64
           echo "Building for Linux ARM64..."
-          GOOS=linux GOARCH=arm64 make
+          GOOS=linux GOARCH=arm64 make obitools
           cd build
           for binary in *; do
             tar -czf ../release/${binary}_${VERSION}_linux_arm64.tar.gz ${binary}
@@ -74,7 +74,7 @@ jobs:
 
           # Build for macOS AMD64 (Intel)
           echo "Building for macOS AMD64..."
-          GOOS=darwin GOARCH=amd64 make
+          GOOS=darwin GOARCH=amd64 make obitools
           cd build
           for binary in *; do
             tar -czf ../release/${binary}_${VERSION}_darwin_amd64.tar.gz ${binary}
@@ -85,7 +85,7 @@ jobs:
 
           # Build for macOS ARM64 (Apple Silicon)
           echo "Building for macOS ARM64..."
-          GOOS=darwin GOARCH=arm64 make
+          GOOS=darwin GOARCH=arm64 make obitools
           cd build
           for binary in *; do
             tar -czf ../release/${binary}_${VERSION}_darwin_arm64.tar.gz ${binary}
@@ -96,7 +96,7 @@ jobs:
 
           # Build for Windows AMD64
           echo "Building for Windows AMD64..."
-          GOOS=windows GOARCH=amd64 make
+          GOOS=windows GOARCH=amd64 make obitools
           cd build
           for binary in *; do
             # Windows binaries have .exe extension
